<resources>
    <string name="app_name">Y-Connect X</string>
    <string name="searching">Searching</string>
    <string name="location_permission_required">Location permission is required in order to connect with vehicle, trip creation, etc.</string>
    <string name="invalid_phone_number_email">Invalid Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="network_connection_error">No internet connection</string>
    <string name="disconnection_dialog_message">Are you sure you want to disconnect?</string>
    <string name="connection_dialog_message">Do you want to connect this vehicle?</string>
    <string name="turn_on_bt_dialog">Please Turn On Bluetooth First!</string>
    <string name="last_trip_info_wrong">Something went wrong while setting last trip info</string>
    <string name="turn_on_gps_dialog">Please Turn On GPS First!</string>
    <string name="foreground_service_notif_message">Wear helmet drive safe</string>
    <string name="welcome_to_yamaha_message">To the World of YAMAHA</string>
    <string name="welcome_string">Welcome</string>
    <string name="welcome_connect_message">An Application to connect your vehicle with\nyour mobile and much more.</string>
    <string name="access_location_dialog">Please permit app to access device location</string>
    <string name="something_went_wrong">Something went wrong!! Try again</string>
    <string name="trip_sync_success">Driving history updated</string>
    <string name="bike_list_sync_success">Vehicle list updated</string>
    <string name="label_ok">OK</string>
    <string name="no_bikes_found">No Vehicles Added</string>
    <string name="add_bike_label">ADD VEHICLES</string>
    <string name="na">NA</string>
    <string name="similar_elock_pattern">ELock pattern cannot be LLLL or RRRR</string>
    <string name="elock_setting">E-LOCK Setting</string>
    <string name="elock_string">E-Lock</string>
    <string name="elock_string_caps">E-LOCK</string>
    <string name="enable_disable_elock">ENABLE ELOCK</string>
    <string name="elock_note">NOTE : Pattern should not consist\nof all repetitive actions.</string>
    <string name="elock_note2">Select indicator pattern sequence\nfor unlocking vehicle without Mobile app</string>
    <string name="elock_set_ack">Pattern Successfully set. Please turn Ignition switch OFF!</string>
    <string name="elock_not_set_ack">Cannot set ELock pattern</string>
    <string name="elock_disable_ack">ELock pattern disabled</string>
    <string name="elock_disable_fail_ack">Cannot reset ELock pattern</string>
    <string name="elock_pattern1">1</string>
    <string name="elock_pattern2">2</string>
    <string name="elock_pattern3">3</string>
    <string name="elock_pattern4">4</string>
    <string name="ecu_disconnected">Vehicle is disconnected!</string>
    <string name="hazard_activated">Hazard On</string>
    <string name="connected_string">CONNECTED</string>
    <string name="hazard_already_active">Hazard is already Active!</string>
    <string name="ignition_on">Ignition On</string>
    <string name="ignition_off">Ignition is turned OFF!</string>
    <string name="choose_another_pattern">"Please choose pattern other than LLLL or RRRR</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="disconnected_successfully">Disconnected successfullly</string>
    <string name="disconnected_failed">Disconnection failed</string>
    <string name="able_to_connect">Vehicle is Connected!</string>
    <string name="auth_failure">Invalid credentials</string>
    <string name="email_verification_pending">Check your email and then login</string>
    <string name="email_verification_pending_title">Email verification pending</string>
    <string name="agreement">Agreement</string>
    <string name="brake_counts">BRAKE COUNTS</string>
    <string name="bike_deletion_ack">Vehicle deleted successfully</string>
    <string name="ble_info_text">Please turn ON the bluetooth to connect the vehicle.</string>
    <string name="otp_digit_empty">Number cannot be blank</string>
    <string name="otp_digit_invalid">Invalid input</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_label">Continue</string>
    <string name="next_label">Next</string>
    <string name="empty_field">Field can not be empty</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="use_strong_password">Use Strong Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_default">0</string>
    <string name="name_label">Name</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="invalid_phone">Please enter a valid phone number of 10 digits</string>
    <string name="email_check">A mail has been sent to your Registered Email Id for changing password</string>
    <string name="leading_space">Please remove leading spaces from input</string>
    <string name="trailing_space">Please remove trailing spaces from input</string>
    <string name="invalid_name">Name can only contain alphabets</string>
    <string name="empty_password">Please enter password</string>
    <string name="empty_chassis">Please enter chassis number</string>
    <string name="empty_otp">Please enter OTP</string>
    <string name="invalid_password_length">Password must be at least 8 characters long</string>
    <string name="invalid_chassis_number">Chassis number is invalid</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="password_changed_success">Password changed successfully</string>
    <string name="bike_added">Vehicle added successfully</string>
    <string name="text_splash_button">LET\'S START</string>
    <string name="lable_splash">THE BEST WAY TO CONNECT WITH US</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mismatch_new_password">New password mismatch</string>
    <string name="menu_home">HOME</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="place_holder_user_name">Jony Blake</string>
    <string name="menu_driving_history">RIDING HISTORY</string>
    <string name="menu_bike_health">Vehicle Health</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_about_us">ABOUT US</string>
    <string name="menu_unregister_user">UNREGISTER USER</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="place_holder_user_email">\@aureliensalomon</string>
    <string name="menu_your_vehicles">YOUR VEHICLES</string>
    <string name="menu_change_password">CHANGE PASSWORD</string>
    <string name="menu_privacy_policy">PRIVACY POLICY</string>
    <string name="btn_label_answer_back">Answer Back</string>
    <string name="btn_label_answer_back_caps">ANSWER BACK</string>
    <string name="btn_label_driving_history">Driving History</string>
    <string name="btn_label_riding_history">Riding History</string>
    <string name="btn_label_riding_history_caps">RIDING HISTORY</string>
    <string name="btn_label_locate_my_bike">Locate My Vehicle</string>
    <string name="btn_label_locate_my_bike_caps">LOCATE MY VEHICLE</string>
    <string name="progress_locate_my_bike">Locate My Vehicle is in progress…</string>
    <string name="progress_answer_back">Answer Back is in progress…</string>
    <string name="progress_elock">Writing E-Lock…</string>
    <string name="connecting_bike">Connecting vehicle…</string>
    <string name="disconnecting_bike">Disconnecting vehicle…</string>
    <string name="btn_label_e_lock_setting">E-Lock Settings</string>
    <string name="btn_label_e_lock_setting_caps">E-LOCK SETTINGS</string>
    <string name="btn_label_hazard">  Hazard  </string>
    <string name="btn_label_hazard_caps">HAZARD</string>
    <string name="btn_label_parking_location_record">Parking Record</string>
    <string name="btn_label_parking_location_record_caps">PARKING RECORD</string>
    <string name="title_activity_dummy_maps">Map</string>
    <string name="title_activity_dummy">Map</string>
    <string name="title_activity_temp">Map</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="enable_foreground_only_location">Enable foreground only location</string>
    <string name="disable_foreground_only_location">Disable foreground only location</string>
    <string name="enable_foreground_and_background_location">Enable foreground and background location</string>
    <string name="disable_foreground_and_background_location">Disable foreground and background location</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="yamaha">YAMAHA</string>
    <string name="label_me">I</string>
    <string name="place_holder_bike_name">MT-15</string>
    <string name="place_holder_bike_tag">The Dark Warrier</string>
    <string name="place_holder_bike_no">HR29K-6422</string>
    <string name="place_holder_bike_status">Locked</string>
    <string name="left_indicator">LEFT INDICATOR</string>
    <string name="right_indicator">RIGHT INDICATOR</string>
    <string name="save_elock">SAVE E-LOCK SEQUENCE</string>
    <string name="ACTION_YES">Yes</string>
    <string name="ACTION_NO">No</string>
    <string name="ACTION_OK">OK</string>
    <string name="ACTION_CANCEL">Cancel</string>
    <string name="ACTION_CONTINUE">Continue</string>
    <string name="ACTION_CONFIRM">Confirm</string>
    <string name="labelVehicle">VEHICLE</string>
    <string name="labelDate">DATE</string>
    <string name="labelFromDate">FROM</string>
    <string name="labelToDate">TO</string>
    <string name="labelDistance">DISTANCE</string>
    <string name="labelDistanceCat1"><![CDATA[< 50]]></string>
    <string name="labelDistanceCat2">50 - 100</string>
    <string name="labelDistanceCat3"><![CDATA[> 100]]></string>
    <string name="labelBreakCat1"><![CDATA[< 50]]></string>
    <string name="labelBreakCat2">50 - 100</string>
    <string name="labelBreakCat3"><![CDATA[> 100]]></string>
    <string name="labelAverageSpeed">AVERAGE SPEED</string>
    <string name="labelSpeedCat1"><![CDATA[< 40]]></string>
    <string name="labelSpeedCat2">40 - 80</string>
    <string name="labelSpeedCat3"><![CDATA[> 80]]></string>
    <string name="btnClear">CLEAR</string>
    <string name="btnApply">APPLY</string>
    <string name="message_update_available">New version available, Please update</string>
    <string name="menu_parking_location_record">PARKING RECORD</string>
    <string name="nav_label_profile">PROFILE</string>
    <string name="nav_label_e_lock">E-LOCK SETTINGS</string>
</resources>